[project]
name = "ai-adk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-adk>=1.13.0",
    "mem0ai>=0.1.116",
    "opik>=1.8.36",
    "requests>=2.32.5",
    "socksio>=1.0.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
